--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <title>Belieb in Love</title>
   <script src="http://code.jquery.com/jquery-latest.min.js"
