--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/biebs.css">
   <script src="js/jquery.cookie.js"></script>
   <script src="js/bootstrap.js" type="text/javascript"></script>
+  <script src="js/howler.js" type="text/javascript"></script>
   <script src="js/biebs.js" type="text/javascript"></script>
 </head>
 <body>
