--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <script src="js/jquery.cookie.js"></script>
   <script src="js/bootstrap.js" type="text/javascript"></script>
   <script src="js/biebs.js" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 <header>
