--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <header>
   <div class="container">
     <p><a href="http://beliebinlove.herokuapp.com/">Who should keep each other company?</a></p>
-    <a href="https://twitter.com/DanOLandy">@danolandy</a>
+    <a target="_blank" href="https://twitter.com/DanOLandy">@danolandy</a>
   </div>
 </header>
 
