--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,11 @@
 <header>
   <div class="container">
     <p><a href="http://beliebinlove.herokuapp.com/">Who should keep each other company?</a></p>
-    <a target="_blank" href="https://twitter.com/DanOLandy">@danolandy</a>
+    <p class="social pull-right">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Who should keep each other company? Embarrass your friends that should meet up." data-size="large" data-hashtags="KeepCompany">Tweet</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </p>
+    
   </div>
 </header>
 
@@ -30,12 +34,14 @@
     <input class="form-control dater text-center" id="focusedInput" type="text" placeholder="Enter Name of Lover #2"><br>
     <input type="submit" value="Submit" class="submit">
   </div>
-    <div >
+    <div class="loot">
       <h2 id="message" class="lyrics text-center"></h2>
     </div>
 
 </div>
 
-
+<footer>
+  <a href="https://twitter.com/DanOLandy"> <i>@DanoLandy</i> </a>
+</footer>
 </body>
 </html>
