--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
   <div class="container">
-    <p><a href="http://beliebinlove.herokuapp.com/">Who should keep each other company?</a></p>
+    <p id="blieb"><a href="http://beliebinlove.herokuapp.com/">Who should keep each other company?</a></p>
     <p class="social pull-right">
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="Who should keep each other company? Embarrass your friends that should meet up." data-size="large" data-hashtags="KeepCompany">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
