--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
   <script src="js/jquery.cookie.js"></script>
   <script src="js/bootstrap.js" type="text/javascript"></script>
   <script src="js/biebs.js" type="text/javascript"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75300321-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
+  <meta name="description" content="Embarrass your friends that should meet up by making them the subject of the song company.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
